# termtypist

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: .SRCINFO  PKGBUILD
src/: app.rs  audio.rs  cli.rs  config.rs  dictionaries.rs  keyboard.rs  main.rs  metrics.rs  quotes.rs  storage.rs  themes.rs  tui.rs  typing.rs
