[package]
name = "termtypist"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Keyboard-first terminal typing trainer inspired by Monkeytype"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/hase9awa/termtypist"
homepage = "https://github.com/hase9awa/termtypist"
keywords = ["typing", "tui", "terminal", "trainer", "monkeytype"]
categories = ["command-line-utilities"]
exclude = ["termtypist_tz.md", "packaging/", "assets/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
rand = "0.8"
ratatui = "0.29"
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
